--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/siosio
-spring.datasource.username=siosio
-spring.datasource.password=siosio
+spring.datasource.url=jdbc:postgresql://localhost:5432/${database_name}
+spring.datasource.username=${database_user}
+spring.datasource.password=${database_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=*
