--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/${database_name}
+spring.datasource.url=jdbc:postgresql://${KEEL_POSTGRESQL_SERVICE_HOST}:${KEEL_POSTGRESQL_SERVICE_PORT}/${database_name}
 spring.datasource.username=${database_user}
 spring.datasource.password=${database_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
