--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://${KEEL_POSTGRESQL_SERVICE_HOST}:${KEEL_POSTGRESQL_SERVICE_PORT}/${database_name}
-spring.datasource.username=${database_user}
-spring.datasource.password=${database_password}
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/siosio
+spring.datasource.username=siosio
+spring.datasource.password=siosio
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
