--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,5 @@
+spring.profiles.include=default
+
 spring.datasource.url=jdbc:postgresql://${KEEL_POSTGRESQL_SERVICE_HOST}:${KEEL_POSTGRESQL_SERVICE_PORT}/${database_name}
 spring.datasource.username=${database_user}
 spring.datasource.password=${database_password}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-
-management.endpoints.web.exposure.include=*
-
-
